--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+// .btn {
+//     font-size: .875rem!important;
+//     font-family: Arial,sans-serif!important;
+//     line-height: 1.375rem!important;
+//     color: #2e2e38;
+//     transition: all .3s ease;
+//     border-radius: 0;
+//     border: .0625rem solid transparent;
+//     height: 2.813rem;
+//     vertical-align: middle;
+//     margin: .3125rem 2.188rem;
+//     min-width: 6.875rem;
+//     cursor: pointer;
+//     box-shadow: none;
+//     padding: .0625rem 1.25rem 0
+// }
+.btn-primary {
+    color: #2e2e38;
+    background-color: #ffe600;
+}
